Mimize max stack size